Infrastructure changes in Shell.Data assembly.

--- a/vAggregator.Shell.Data/vAggregator.Shell.Data.csproj
+++ b/vAggregator.Shell.Data/vAggregator.Shell.Data.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\vAggregator.Shell.Common\vAggregator.Shell.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Creators\" />
+  </ItemGroup>
+
 </Project>
